WIP: gravatar api #128